# pi-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  task-p6-toolresult-report.md
crates/pi-agent/: Cargo.toml
crates/pi-agent/src/: agent_loop.rs  cancel.rs  lib.rs  tools.rs  types.rs
crates/pi-agent/tests/: agent_loop.rs
crates/pi-ai/: Cargo.toml
crates/pi-ai/src/: env_api_keys.rs  event_stream.rs  http.rs  json_parse.rs  lib.rs  models.rs  models_generated.rs  shared_text.rs  sse.rs  types.rs
crates/pi-ai/src/api/: anthropic_messages.rs  aws_eventstream.rs  aws_sigv4.rs  azure_openai_responses.rs  bedrock_converse_stream.rs  common.rs  google_generative_ai.rs  google_shared.rs  google_vertex.rs  incremental.rs  mistral_conversations.rs  mod.rs  openai_codex_responses.rs  openai_completions.rs  openai_responses.rs  openai_responses_shared.rs  pi_messages.rs  simple_options.rs  transform_messages.rs
crates/pi-ai/src/auth/: credential_store.rs  helpers.rs  mod.rs  resolve.rs  types.rs
crates/pi-ai/src/oauth/: anthropic.rs  browser.rs  callback_server.rs  device_code.rs  github_copilot.rs  mod.rs  oauth_page.rs  openai_codex.rs  pkce.rs  radius.rs  types.rs
crates/pi-ai/src/utils/: mod.rs  overflow.rs  retry.rs  sanitize_unicode.rs
crates/pi-ai/tests/: api_goldens.rs  auth_file_roundtrip.rs  env_api_keys.rs  models_catalog.rs  oauth_login_flows.rs  oauth_to_auth.rs  partial_sharing.rs  types_roundtrip.rs  utils_test.rs
crates/pi-ai/tests/fixtures/api/: expected_events_azure_openai_responses.json  expected_events_bedrock_converse_stream.json  expected_events_google_generative_ai.json  expected_events_mistral_conversations.json  expected_events_openai_completions.json  expected_events_openai_responses.json  expected_events_pi_messages.json  headers_anthropic_oauth.json  request_anthropic.json  request_anthropic_oauth.json  request_azure_openai_responses.json  request_bedrock_converse_stream.json  request_google_vertex.json  (+17 more)
crates/pi-coding-agent/: Cargo.toml
crates/pi-coding-agent/examples/: interactive_smoke.rs  mode_smoke.rs
crates/pi-coding-agent/src/: auth_storage.rs  config.rs  export_html.rs  extension_bridge.rs  lib.rs  main.rs  migrations.rs  model_registry.rs  package_manager.rs  package_manager_cli.rs  resolve_config_value.rs  resource_loader.rs  serde_util.rs  session_manager.rs  session_types.rs  settings_manager.rs  source_info.rs  system_prompt.rs  wire_out.rs
crates/pi-coding-agent/src/cli/: args.rs  history.rs  initial_message.rs  mod.rs  model_select.rs  session_picker.rs  session_select.rs  startup_ui.rs
crates/pi-coding-agent/src/extensions/: actions.rs  binding.rs  client.rs  detect.rs  events.rs  frames.rs  mod.rs  provider.rs  session_sync.rs  spawn.rs  state.rs  tools.rs
crates/pi-coding-agent/src/modes/: json.rs  mod.rs  print.rs
crates/pi-coding-agent/src/session/: events.rs  mod.rs  runtime.rs  services.rs
crates/pi-coding-agent/src/tools/: mod.rs
crates/pi-coding-agent/tests/: agent_session_tests.rs  bridge_events.rs  bridge_lifecycle.rs  bridge_providers.rs  bridge_tools.rs  byte_compat_roundtrip.rs  custom_message_tests.rs  export_html_tests.rs  ext_ui_tests.rs  interactive_dialog_tests.rs  interactive_mode_tests.rs  interactive_selector_tests.rs  interactive_theme_tests.rs  interactive_transcript_tests.rs  main_cli.rs  model_auth_tests.rs  package_manager_tests.rs  print_mode_tests.rs  rpc_mode_tests.rs  system_prompt_fixtures.rs  wire_out_tests.rs
crates/pi-coding-agent/tests/common/: mod.rs  vt_terminal.rs
crates/pi-coding-agent/tests/fixtures/: auth_sample.json  help.txt  pi-written-session.jsonl  session_before_compaction_sample.jsonl  session_pi_written.jsonl  session_v3_all_kinds.jsonl  settings_sample.json
crates/pi-ext-protocol/: Cargo.toml
crates/pi-ext-protocol/fixtures/: rust-to-sidecar-command.json  rust-to-sidecar-event.json  rust-to-sidecar-lifecycle.json  rust-to-sidecar-provider.json  rust-to-sidecar-session-setup.json  rust-to-sidecar-session-sync.json  rust-to-sidecar-shortcut.json  rust-to-sidecar-state.json  rust-to-sidecar-tool.json  rust-to-sidecar-ui-focus.json  rust-to-sidecar-ui-resize.json  rust-to-sidecar-ui-theme-catalog-result.json  rust-to-sidecar-ui-theme-lookup-result.json  rust-to-sidecar-ui.json  sidecar-to-rust-action.json  sidecar-to-rust-error.json  sidecar-to-rust-lifecycle.json  sidecar-to-rust-provider.json  sidecar-to-rust-tool-execute-result.json  sidecar-to-rust-tool.json  sidecar-to-rust-ui-editor-change.json  sidecar-to-rust-ui-editor-submit.json  sidecar-to-rust-ui-get-all-themes.json  sidecar-to-rust-ui-terminal-input-active.json  sidecar-to-rust-ui-terminal-input-result.json  sidecar-to-rust-ui.json
crates/pi-ext-protocol/src/: lib.rs
crates/pi-ext-protocol/tests/: golden.rs
crates/pi-orchestrator/: Cargo.toml
crates/pi-orchestrator/src/: config.rs  handler.rs  lib.rs  main.rs  radius.rs  rpc_process.rs  serve.rs  storage.rs  supervisor.rs  types.rs  wire.rs
crates/pi-orchestrator/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
crates/pi-orchestrator/tests/: cli_smoke.rs  handler.rs  ipc.rs  radius.rs  rpc_process.rs  serve.rs  supervisor.rs
crates/pi-orchestrator/tests/support/: fake_pi.rs
crates/pi-tui/: Cargo.toml
crates/pi-tui/src/: autocomplete.rs  clipboard.rs  component.rs  fuzzy.rs  keybindings.rs  keys.rs  kill_ring.rs  lib.rs  line.rs  terminal_image.rs  tui.rs  undo_stack.rs  util.rs  word_navigation.rs
crates/pi-tui/src/components/: box_widget.rs  editor.rs  image.rs  input.rs  loader.rs  markdown.rs  mod.rs  select_list.rs  settings_list.rs  spacer.rs  text.rs  truncated_text.rs
crates/pi-tui/src/terminal/: mod.rs  process.rs
crates/pi-tui/tests/: editor_oracle_accessors.rs  editor_oracle_autocomplete.rs  editor_oracle_backslash.rs  editor_oracle_char_jump.rs  editor_oracle_grapheme_wrap.rs  editor_oracle_history.rs  editor_oracle_kill_ring.rs  editor_oracle_kitty.rs  editor_oracle_paste_marker.rs  editor_oracle_sticky.rs  editor_oracle_undo.rs  editor_oracle_unicode.rs  editor_oracle_word_wrap.rs  text_pipeline.rs
(+124 files in other folders)
