# inkferro is its own nested workspace; exclude it and path-dep its crates from pi crates.
[workspace]
resolver = "3"
members = [
    "crates/pi-tui",
    "crates/pi-ai",
    "crates/pi-agent",
    "crates/pi-coding-agent",
    "crates/pi-orchestrator",
    "crates/pi-ext-protocol",
]
exclude = ["inkferro"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process", "signal", "fs", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
anyhow = "1"
rustix = { version = "1", features = ["fs", "process", "stdio", "termios", "system"] }
jiff = "0.2"
