[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pi coding agent: CLI, modes, session manager, tools, extension bridge"

[dependencies]
pi-tui = { path = "../pi-tui" }
pi-agent = { path = "../pi-agent" }
pi-ai = { path = "../pi-ai" }
pi-ext-protocol = { path = "../pi-ext-protocol" }
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
regex = "1"
globset = "0.4"
base64 = "0.22"
ignore = "0.4"
diff = "0.1"
tempfile = "3"
parking_lot = "0.12"
serde = { workspace = true, features = ["derive"] }
rustix = { workspace = true, features = ["fs", "process", "stdio", "termios", "system"] }

[[bin]]
name = "pi"
path = "src/main.rs"
