[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pi coding agent: CLI, modes, session manager, tools, extension bridge"

[dependencies]
pi-tui = { path = "../pi-tui" }
pi-agent = { path = "../pi-agent" }
pi-ai = { path = "../pi-ai" }
pi-ext-protocol = { path = "../pi-ext-protocol" }
anyhow.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
jiff.workspace = true
# UUID v4/v7 for session ids (pi uses uuidv7 for session id, randomUUID for entry ids).
uuid = { version = "1", features = ["v4", "v7"] }
# Home directory for ~/.pi/agent resolution.
dirs = "6"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }

[[bin]]
name = "pi"
path = "src/main.rs"
