[package]
name = "pi-coding-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pi coding agent: CLI, modes, session manager, tools, extension bridge"

[dependencies]
pi-tui = { path = "../pi-tui" }
pi-agent = { path = "../pi-agent" }
pi-ai = { path = "../pi-ai" }
pi-ext-protocol = { path = "../pi-ext-protocol" }
anyhow.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
# YAML frontmatter parsing (replaces pi's `yaml` npm package in
# utils/frontmatter.ts, consumed by skills/prompt-template loading).
serde_yaml = "0.9"
thiserror.workspace = true
jiff.workspace = true
reqwest.workspace = true
# UUID v4/v7 for session ids (pi uses uuidv7 for session id, randomUUID for entry ids).
uuid = { version = "1", features = ["v4", "v7"] }
# Home directory for ~/.pi/agent resolution.
dirs = "6"
tokio = { workspace = true, features = ["io-std"] }
regex = "1"
globset = "0.4"
semver = "1"
url = "2"
base64 = "0.22"
ignore = "0.4"
diff = "0.1"
tempfile = "3"
parking_lot = "0.12"
rustix = { workspace = true, features = ["fs", "process", "stdio", "termios", "system"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "parsing", "regex-fancy"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
pi-vt = { path = "../pi-vt" }
tempfile = "3"
tokio = { workspace = true }

[[bin]]
name = "pi"
path = "src/main.rs"
