[package]
name = "pi-ext-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Versioned serde protocol for the pi extension sidecar bridge"

[dependencies]
pi-ai = { path = "../pi-ai" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
