[package]
name = "pi-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pi orchestrator: supervisor spawning pi --mode rpc"

[dependencies]
# Object-safe async presence and transport boundaries.
async-trait = "0.1"
dirs = "6"
# Node-compatible hostname for Radius registration payloads.
hostname = "0.4"
jiff.workspace = true
# Radius OAuth credential storage.
pi-ai = { path = "../pi-ai" }
# Shared ~/.pi/agent/auth.json path resolution.
pi-coding-agent = { path = "../pi-coding-agent" }
# Heartbeat jitter matching Math.random.
rand = "0.9"
# Rustls HTTP transport for optional Radius presence.
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Radius heartbeat tasks and cancellation.
tokio.workspace = true
# WHATWG-compatible URL resolution for Radius endpoints.
url = "2"

[dev-dependencies]
# Isolated auth and persistence fixtures.
tempfile = "3"
# Paused-time heartbeat tests.
tokio = { workspace = true, features = ["test-util"] }

[[bin]]
name = "pi-orchestrator"
path = "src/main.rs"
