[package]
name = "pi-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pi orchestrator: supervisor spawning pi --mode rpc"

[dependencies]
# Object-safe async presence and transport boundaries.
async-trait = "0.1"
dirs = "6"
# Node-compatible hostname for Radius registration payloads.
hostname = "0.4"
jiff.workspace = true
# Lifecycle diagnostics (console.error analog) without stderr writes in library code.
log = "0.4"
# Poison-free synchronous guards for supervisor state.
parking_lot = "0.12"
# Radius OAuth credential storage.
pi-ai = { path = "../pi-ai" }
# Shared ~/.pi/agent/auth.json path resolution.
pi-coding-agent = { path = "../pi-coding-agent" }
# Heartbeat jitter matching Math.random.
rand = "0.9"
# Rustls HTTP transport for optional Radius presence.
reqwest.workspace = true
# Process-group and signal handling for RPC children.
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# Async process, IPC, heartbeat, and cancellation runtime.
tokio.workspace = true
# Request ids matching the oracle's randomUUID suffix.
uuid = { version = "1", features = ["v4"] }
# WHATWG-compatible URL resolution for Radius endpoints.
url = "2"

[features]
# Storage fault-injection seam for this crate's own lifecycle tests; never
# enabled by production builds (the self dev-dependency below turns it on
# for test targets only).
test-fault-injection = []

[dev-dependencies]
# Enables the storage fault-injection seam for integration tests only.
pi-orchestrator = { path = ".", features = ["test-fault-injection"] }
# Isolated auth and persistence fixtures.
tempfile = "3"
# Paused-time heartbeat tests.
tokio = { workspace = true, features = ["test-util"] }

[[bin]]
name = "pi-orchestrator"
path = "src/main.rs"
