[package]
name = "pi-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "pi-tui-shaped component model and widgets on inkferro"

[dependencies]
inkferro-core = { path = "../../inkferro/crates/inkferro-core" }
inkferro-rt = { path = "../../inkferro/crates/inkferro-rt" }
thiserror = { workspace = true }
rustix = { workspace = true, features = ["fs", "process", "stdio", "termios", "system"] }
unicode-segmentation = "1"
# East Asian Width for pi visibleWidth (tab/AM rules live in util.rs).
unicode-width = { version = "0.2", default-features = false }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
regex = { version = "1", default-features = false, features = ["std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
pretty_assertions = "1"
